# beaker-cdc-modeling

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
documentation/model/docs/: getting_started.qmd
examples/: example_10_1.md  example_10_1.md.metadata  example_11_1.md  example_11_1.md.metadata  example_12_1.md  example_12_1.md.metadata  example_12_2.md  example_12_2.md.metadata  example_12_3.md  example_12_3.md.metadata  example_13_1.md  example_13_1.md.metadata  example_13_2.md  example_13_2.md.metadata  example_13_3.md  example_13_3.md.metadata  example_14_1.md  example_14_1.md.metadata  example_15_1.md  example_15_1.md.metadata  example_16_1.md  example_16_1.md.metadata  example_17_1.md  example_17_1.md.metadata  example_18_1.md  example_18_1.md.metadata  example_19_1.md  example_19_1.md.metadata  example_1_1.md  example_1_1.md.metadata  example_1_10.md  example_1_10.md.metadata  example_1_11.md  example_1_11.md.metadata  example_1_12.md  example_1_12.md.metadata  example_1_13.md  example_1_13.md.metadata  example_1_14.md  example_1_14.md.metadata  (+94 more)
src/beaker_cdc_modeling/: agent.py  context.py
src/beaker_cdc_modeling/procedures/python3/: fetch_cdc_dataset.py  search_cdc.py
